# MSAexplorer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deploy_github_page.yaml  deploy_page.yaml  deploy_to_pypi.yaml  deploy_to_shinyapps.yaml  documentation.yaml  test.yaml
alignplot/: __init__.py  __main__.py  command.py  config.py  data.py
app_src/: shiny_plots.py  shiny_server.py  shiny_user_interface.py
app_src/deploy_static/: splash.html
deploy_static/: splash.html
docs/: python-package.md  shiny-app.md  standalone.md
example_alignments/: AB258389.gff3  AS.fasta  AS.gff3  DNA.fasta  DNA_RNA.bed  RNA.fasta  alignment.fasta  nt.gb
js/: window_dimensions.js
msaexplorer/: __init__.py  _data_classes.py  _helpers.py  app.py  cli.py  command.py  config.py  draw.py  explore.py  export.py  save.py
msaexplorer/www/: styles.css
shiny-app/: app.py
site/: shinylive-sw.js
site/shinylive/: Editor.css  Editor.js  browser-GIPKTNWH.js  browser-TR5PJ5QN.js  chunk-43PIB2RV.js  chunk-QASEXHFR.js  load-shinylive-sw.js  lzstring-worker.js  pyodide-worker.js  run-python-blocks.js  shinylive.css  shinylive.js
tests/: README.md  conftest.py  test_alignment_calculations.py  test_alignment_parsing.py  test_annotation_parsing.py  test_consensus.py  test_draw_plots.py  test_export.py  test_orf_detection.py  test_stats_calculations.py
tests/data/: alignment.clustal  alignment.fasta  alignment.nexus  alignment.phylip  alignment.stockholm  annotation.bed  annotation.gff3
www/css/: styles.css
(+8 files in other folders)
