[build-system]
requires = ["setuptools >= 65","wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "msaexplorer"
version = "0.1.0"
dependencies = ["numpy~=2.1.3", "matplotlib"]
requires-python = ">= 3.10"
authors = [{name = "Jonas Fuchs", email = "jonas.fuchs@uniklinik-freiburg.de"}]
maintainers = [{name = "Jonas Fuchs", email = "jonas.fuchs@uniklinik-freiburg.de"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["msa"]

[project.urls]

[tool.setuptools.packages.find]
where = ["."]
include = ["msaexplorer"]
exclude = []
namespaces = false


